# users-bugred-project-tests

./: .gitignore  README.md  pyproject.toml
diplom_users_tests/data/: profile_task.py
diplom_users_tests/pages/: login_page.py  profile_tasks_page.py  users_page.py
diplom_users_tests/utils/: attach.py
tests/: add_task_page_test.py  conftest.py  login_page_test.py  login_test.py  profile_task_test.py  profile_user_page_test.py  registration_page_test.py  users_page_test.py  users_test.py
users_bugred_project_tests/data/: data_search.py  users_login.py
users_bugred_project_tests/pages/: login_API_page.py  login_page.py  profile_tasks_page.py  profile_user_page.py  registration_page.py  users_page.py
users_bugred_project_tests/utils/: attach.py
